Edit lesson 17